# xlstm-lm

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: lint-python.yml
cmd/: docker.sh  generate.sh  train.sh
docker/: Dockerfile
src/: utils.py
src/cfg/: config_type.py  load_yaml_cfg.py
src/cfg/yaml/1.3b/: config.yaml  config_gen.yaml  config_ja.yaml
src/cfg/yaml/125m/: config.yaml
src/cfg/yaml/2.7b/: config.yaml
src/cfg/yaml/350m/: config.yaml
src/cfg/yaml/template/: config.yaml
src/cfg/yaml/v1/: generate_config.yaml  train_config.yaml
src/cfg/yaml/v2/: train_config.yaml
src/cfg/yaml/v3/: generate_config.yaml  train_config.yaml
src/cfg/yaml/v4/: generate_config.yaml  train_config.yaml
src/cfg/yaml/v5/: generate_config.yaml  train_config.yaml
src/dataset/: ja_cc_dataset.py  ja_local_dataset.py  ja_twitter_dataset.py  ja_wiki_dataset.py  nlp_dataset.py  ntp_data_generator.py  slim_pajama_dataset.py
src/experiment/setup/: criterion.py  dataloader.py  dataset.py  lr_scheduler.py  model.py  optimizer.py  tokenizer.py
src/experiment/test/: generate.py  generate_v2.py
src/experiment/train/: lr_scheduler.py  train.py  train_fsdp.py  trainer.py  trainer_fsdp.py
src/model/: xlstm_model_wrapper.py
tests/: const.py  test_dataloader.py  test_load_config.py  test_tokenizer.py
