[project]
name = "xlstm-lm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Mizuki", email = "mbaba@kanolab.net" }
]
dependencies = [
    "xlstm>=1.0.3",
    "torch>=2.3.1",
    "transformers>=4.41.2",
    "omegaconf>=2.3.0",
    "datasets>=2.20.0",
    "pytest>=8.2.2",
    "tqdm>=4.66.4",
    "dacite>=1.8.1",
    "setuptools>=70.1.0",
    "zstandard>=0.22.0",
    "ninja>=1.11.1.1",
    "wandb>=0.17.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/"]

## https://gihyo.jp/article/2023/03/monthly-python-2303
## 略称一覧: https://pypi.org/project/ruff/0.0.242/#supported-rule
[tool.ruff]
line-length = 120

lint.select = ["ALL"]
lint.ignore = [
    "D",
]

# ファイル毎に無効とする設定
# https://docs.astral.sh/ruff/settings/#lint_per-file-ignores
[tool.ruff.lint.per-file-ignores]
"*.py" = [
    "ANN101",
    "COM812",
    "ISC001",
    "ERA001",
    "INP001",
    "TRY002",
]